--- a/style.css
+++ b/style.css
@@ -5,14 +5,14 @@ Date:
 
 .container{ /*DO NOT REMOVE OR EDIT*/
     display: grid;
-    grid-template-columns:1fr 2fr 1fr;
+    grid-template-columns:1fr 1fr 1fr 1fr;
     grid-template-rows: auto;
     grid-template-areas: 
-    "header header header"
-    "side1 section1 section1"
-    "section2 videoSection side2"
-    "references references references"
-    "footer footer footer";
+    "header header header header"
+    "side1 section1 section1 section1" 
+    "side1 section2 videoSection side2"
+    "references references references references"
+    "footer footer footer footer";
 }
 
 .header{ /*DO NOT REMOVE*/
@@ -56,3 +56,4 @@ Date:
 img{
   width: 100%
 }
+
