changed the font colour for the header, section 1 and 2, changed the padding for the footer

--- a/style.css
+++ b/style.css
@@ -23,7 +23,7 @@ Date:
     text-align: center;
     background-color: #7400B8;
     font-family: 'Zen Antique', serif;
-    color: #4EA8DE
+    color: #96C6CE
 }
 
 .main{ /*DO NOT REMOVE*/
@@ -43,7 +43,7 @@ Date:
     background-color: #6930C3;
     padding: 60px;
     font-family: 'Oswald', sans-serif;
-    color: #4EA8DE
+    color: #F8F8F8
 }
 
 .section2{ /*DO NOT REMOVE*/
@@ -51,7 +51,7 @@ Date:
     background-color: #5E60CE;
     padding: 20px;
     font-family: 'Oswald', sans-serif;
-    color: #4EA8DE
+    color: #000100
 
 }
 
@@ -72,7 +72,7 @@ Date:
     text-align: center;
     background-color: #4EA8DE;
     color: #7400B8;
-    padding: 20px;
+    padding: 40px;
 }
 
 img{
