--- a/style.css
+++ b/style.css
@@ -1,6 +1,9 @@
 @import url('https://fonts.googleapis.com/css2?family=Zen+Antique&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Oswald:wght@700&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Oswald:wght@700&display=swap');
+
+a:link,a:visited{
+  color: #caf0f8
+}
 /*
 Name: 
 Date: 
@@ -63,7 +66,7 @@ Date:
   grid-area: references;
   text-align: center;
   background-color: #5390D9;
-  color: #6930C3;
+  color: #13232E;
   padding: 20px;
 }
 
